[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Character/Illustration_03.png" type="Texture" id=1]
[ext_resource path="res://Asset/Character/Illustration_01.png" type="Texture" id=2]
[ext_resource path="res://Asset/Character/Ryan.png" type="Texture" id=3]
[ext_resource path="res://Asset/Character/Jaka.png" type="Texture" id=4]
[ext_resource path="res://Scene & Script/Pick Character/PickChara.gd" type="Script" id=5]
[ext_resource path="res://Asset/Font/jumper_3/JumperPERSONALUSEONLY-RegularItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Asset/Selector/SelectorP2.png" type="Texture" id=7]
[ext_resource path="res://Asset/Selector/SelectorP1.png" type="Texture" id=8]
[ext_resource path="res://Asset/Sound and Music/Sound/220206__gameaudio__beep-space-button.wav" type="AudioStream" id=9]
[ext_resource path="res://Asset/Sound and Music/Sound/220203__gameaudio__casual-death-loose.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1_label" type="ColorRect" parent="."]
anchor_left = 0.15
anchor_top = 0.583333
anchor_right = 0.375
anchor_bottom = 0.666667
color = Color( 0.415686, 0.388235, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Player1_label"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2_label" type="ColorRect" parent="."]
anchor_left = 0.625
anchor_top = 0.583
anchor_right = 0.837
anchor_bottom = 0.667
margin_top = 0.127991
margin_right = 0.320007
margin_bottom = -0.128021
color = Color( 0.415686, 0.388235, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player2_label"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.708
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.127991
color = Color( 0.247059, 0.0941176, 0.0941176, 0.592157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1_Chara" type="TextureRect" parent="."]
anchor_left = 0.125
anchor_right = 0.4
anchor_bottom = 0.583
margin_bottom = 0.127991
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2_Chara" type="TextureRect" parent="."]
anchor_left = 0.6
anchor_right = 0.875
anchor_bottom = 0.583
margin_right = -6.10352e-05
margin_bottom = 0.127991
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ryan_Character2" type="TextureRect" parent="."]
anchor_left = 0.55
anchor_top = 0.75
anchor_right = 0.65
anchor_bottom = 0.917
margin_top = -3.05176e-05
margin_right = -3.05176e-05
margin_bottom = -0.128021
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jaka_Character3" type="TextureRect" parent="."]
anchor_left = 0.312
anchor_top = 0.75
anchor_right = 0.412
anchor_bottom = 0.917
margin_left = 0.319992
margin_top = -3.05176e-05
margin_right = 0.319977
margin_bottom = -0.128021
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorP1" type="TextureRect" parent="."]
anchor_left = 0.275
anchor_top = 0.812
anchor_right = 0.312
anchor_bottom = 0.854
margin_top = 0.191956
margin_right = 0.319992
margin_bottom = 0.0639648
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorP2" type="TextureRect" parent="."]
anchor_left = 0.65
anchor_top = 0.813
anchor_right = 0.687
anchor_bottom = 0.854
margin_top = -0.191986
margin_right = 0.320038
margin_bottom = 0.0640564
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SelectedOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
